# litchi-head

./: .coverage  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.en.md  README.md  docker-compose.yml  pyproject.toml  start_dev.ps1
.codex/: hooks.json
backend/: README.md  async_utils.py  config.py  indicators.py  limiter.py  main.py  requirements.txt
config/: settings.yaml
docs/: AI会话交接文档.md  AI自动化工作流程.md  README.md  初版要求.md  对比分析与提升建议-初版要求vs竞品调研.md  技术实现方案-AI驱动版.md  技术实现方案-增强补充.md  环境配置指南.md  设计方案-v1.0-改进版.md  调研报告-多智能体投资决策平台竞品分析.md
frontend/: .gitignore  README.md  next.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts
scripts/: check.ps1  check.py  measure_llm_cost.py  pre-push  store-api-keys.py
tests/: conftest.py  test_agents_base.py  test_agents_master.py  test_agents_xiao_zhi.py  test_backend_indicators.py  test_backtest_bridge.py  test_backtest_engine.py  test_backtest_models.py  test_complexity_router.py  test_core_protocol.py  test_data_cache.py  test_data_collector.py  test_data_models.py  test_data_providers.py  test_debate_d1_cross_review.py  test_debate_d2_direction_constraint.py  test_debate_d3_independent_review.py  test_debate_d4_vote_summary_extension.py  test_debate_m1_history_injection.py  test_debate_m2_reflection.py  test_debate_orchestrator.py  test_debate_trust.py  test_e2e_full_pipeline.py  test_integration_master_agent.py  test_langgraph_prototype.py  test_memory_knowledge_base.py  test_memory_manager.py  test_memory_store.py  test_risk_r1_three_layer.py  test_sanity.py  test_trader_bridge.py  test_trader_t1.py  test_utils_cost_tracker.py  test_utils_llm.py  (+1 more)
(+461 files in other folders)
